# Nexus_AI

./: .env.default  .env.example  .gitignore  LOGIC_HASH.md  MANIFEST.md  README.md  pyproject.toml  setup_keys.py
data/: bridge_output.json  seed_cache.json
nexus_ingest/: __init__.py  pmc_pubmed.py
scripts/: ingest_payvand_papers.py  pubmed_api_bridge.py  sanity_check_compute.py  sanity_test_ingest.py
simulations/: ber_vs_cell_count.py  bistable_gj_network.py  bistable_memory_test.py  burnin_transcription_audit.py  cell_division_handoff.py  golden_template_test.py  lab_success_visualization.py  maintenance_cost_test.py  neoblast_vmem_stability.py  neuron_gj_network.py  noise_tolerance_sweep.py  signal_propagation.py  signal_propagation_simple.py  stochastic_consensus_test.py  voltage_threshold_sweep.py
src/acheron/: __init__.py  __main__.py  cli.py  config.py  models.py
src/acheron/collectors/: __init__.py  arxiv.py  base.py  biorxiv.py  physionet.py  pubmed.py
src/acheron/extraction/: __init__.py  chunker.py  pdf_parser.py
src/acheron/interface/: __init__.py  nexus.py  ws_server.py
src/acheron/rag/: __init__.py  agent.py  bio_units.py  compute.py  experiment_designer.py  hypothesis_engine.py  ledger.py  live_retrieval.py  pipeline.py  query_parser.py  science_filter.py  tools.py
src/acheron/reasoning/: __init__.py  denram.py  empirical.py  falsification.py  mosaic.py  (+9 more)
tests/: test_bio_units.py  test_chunker.py  test_compute.py  test_config.py  test_hypothesis_engine.py  test_interface.py  test_ledger.py  test_live_retrieval.py  test_models.py  test_nexus_ingest.py  test_pipeline.py  test_reasoning_engine.py  test_science_first.py
(+18 files in other folders)
