[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acheron-nexus"
version = "0.1.0"
description = "Bioelectricity and biomedical research RAG assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "NyxSystems"},
]
dependencies = [
    # HTTP and API clients
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",

    # PDF and document processing
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",

    # NLP and embeddings
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",

    # Vector store
    "chromadb>=0.5.0",

    # LLM integration
    "openai>=1.30.0",
    "anthropic>=0.34.0",

    # Web interface
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",

    # Data handling
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # XML parsing (PubMed)
    "lxml>=5.2.0",
    "beautifulsoup4>=4.12.0",

    # CLI
    "rich>=13.7.0",
    "click>=8.1.0",

    # Utilities
    "tenacity>=8.3.0",
    "python-dateutil>=2.9.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
acheron = "acheron.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
